fixed spacing issues with mobile, portable, and landscape devices. Especially changed the picture layout in the about section

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -160,9 +160,15 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-bottom-med {
   margin-bottom: 4rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-med {
+      margin-bottom: 3rem !important; } }
 
 .u-margin-bottom-small {
   margin-bottom: 1.5rem !important; }
@@ -183,6 +189,12 @@ body {
   background-color: #F7F7F7;
   padding: 30rem 0;
   margin-top: -20vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 20rem 0; } }
+  @media (max-width: 75em) {
+    .section-about {
+      padding: 25rem 0; } }
 
 .section-features {
   padding: 20rem 0;
@@ -192,15 +204,33 @@ body {
   transform: skewY(-7deg); }
   .section-features > * {
     transform: skewY(7deg); }
+  @media (max-width: 75em) {
+    .section-features {
+      padding: 17.5rem 0; } }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 12rem 0; } }
 
 .section-tours {
   padding: 25rem 0 10rem 0;
   background-color: #F7F7F7;
   margin-top: -11rem; }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 20rem 0 5rem 0; } }
+  @media (max-width: 75em) {
+    .section-tours {
+      padding: 23.5rem 0 7.5rem 0; } }
 
 .section-stories {
   position: relative;
   padding: 15rem 0; }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 10rem 0; } }
+  @media (max-width: 75em) {
+    .section-stories {
+      padding: 12.5rem 0; } }
 
 .section-book {
   padding: 15rem;
@@ -391,22 +421,65 @@ body {
     border-radius: 2px;
     position: absolute;
     z-index: 10;
-    transition: all 0.2s; }
+    transition: all 0.2s;
+    outline-offset: 2rem; }
+    @media (max-width: 75em) {
+      .composition__photo {
+        width: 100%;
+        box-shadow: 0 1.5rem 3.5rem rgba(0, 0, 0, 0.3);
+        outline-offset: 1.5rem; } }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.33%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
+        outline-offset: 1rem; } }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 75em) {
+        .composition__photo--p1 {
+          top: 0; } }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          top: 0;
+          transform: scale(1.2); } }
     .composition__photo--p2 {
-      right: 5%;
+      right: 0;
       top: 2rem; }
+      @media (max-width: 75em) {
+        .composition__photo--p2 {
+          top: 15rem;
+          left: 60%; } }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          top: -1rem;
+          left: 0;
+          transform: scale(1.3);
+          z-index: 30; } }
     .composition__photo--p3 {
       left: 20%;
       top: 14rem; }
+      @media (max-width: 75em) {
+        .composition__photo--p3 {
+          top: 30rem;
+          left: 15%; } }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          top: 1rem;
+          left: 0;
+          transform: scale(1.1); } }
     .composition__photo:hover {
       outline: 1.5rem solid #55c57a;
-      outline-offset: 2rem;
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
+      @media (max-width: 56.25em) {
+        .composition__photo:hover {
+          outline: 1rem solid #55c57a;
+          transform: scale(1.4);
+          z-index: 40; } }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
@@ -418,12 +491,18 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: all .2s; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      padding: 2rem; } }
   .feature-box__icon {
     font-size: 6rem;
     margin-bottom: .5rem;
     background-image: linear-gradient(to right, #7ed56f, #28b485);
     -webkit-background-clip: text;
     color: transparent; }
+    @media (max-width: 56.25em) {
+      .feature-box__icon {
+        margin-bottom: 0; } }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
@@ -680,7 +759,11 @@ order: base + typography > general layout + grid > page layout > components
     .footer {
       padding: 8rem 0; } }
   .footer__logo-box {
-    text-align: center; }
+    text-align: center;
+    margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .footer__logo-box {
+        margin-bottom: 6rem; } }
   .footer__logo {
     width: 15rem; }
   .footer__navigation {
@@ -730,6 +813,10 @@ order: base + typography > general layout + grid > page layout > components
     .row {
       max-width: 50rem;
       padding: 0 3rem; } }
+  @media (max-width: 75em) {
+    .row {
+      max-width: 70rem;
+      padding: 0 5rem; } }
   .row::after {
     content: "";
     display: table;
