--- a/Natours/starter/sass/components/_composition.scss
+++ b/Natours/starter/sass/components/_composition.scss
@@ -8,26 +8,73 @@
         position: absolute;
         z-index: 10;
         transition: all 0.2s;
+        outline-offset: 2rem;
+
+        @include respond(tab-land){
+            width: 100%;
+            box-shadow: 0 1.5rem 3.5rem rgba($black, .3);
+            outline-offset: 1.5rem;
+        }
+        @include respond(tab-port){
+            float: left;
+            position: relative;
+            width: 33.33%;
+            box-shadow: 0 1.5rem 3rem rgba($black, .2);
+            outline-offset: 1rem;
+        }
+
+
         &--p1{
             left: 0;
             top: -2rem;
-            
+
+            @include respond(tab-land){
+                top: 0;
+            }
+            @include respond(tab-port){
+                top: 0;
+                transform: scale(1.2);
+            }
         }
         &--p2{
-            right: 5%;
+            right: 0;
             top: 2rem;
+            @include respond(tab-land){
+                top: 15rem;
+                left: 60%;
+            }
+            @include respond(tab-port){
+                top: -1rem;
+                left: 0;
+                transform: scale(1.3);
+                z-index: 30;
+            }
         }
         &--p3{
             left: 20%;
             top: 14rem;
+            @include respond(tab-land){
+                top: 30rem;
+                left: 15%;
+            }
+            @include respond(tab-port){
+                top: 1rem;
+                left: 0;
+                transform: scale(1.1);
+            }
         }
         
         &:hover{
             outline: 1.5rem solid $color-primary;
-            outline-offset: 2rem;
             transform: scale(1.05) translateY(-.5rem);
             box-shadow: 0 2.5rem 4rem rgba($black, 0.5);
             z-index: 20;
+
+            @include respond(tab-port){
+                outline: 1rem solid $color-primary;
+                transform: scale(1.4);
+                z-index: 40;
+            }
         }
     }
     
