--- a/Natours/starter/sass/components/_feature-box.scss
+++ b/Natours/starter/sass/components/_feature-box.scss
@@ -7,12 +7,19 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($black, .15);
     transition: all .2s;
+    @include respond(tab-port){
+        padding: 2rem;
+    }
+
     &__icon {
         font-size: 6rem;
         margin-bottom: .5rem;
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
         -webkit-background-clip: text;
         color: transparent;
+        @include respond(tab-port){
+            margin-bottom: 0;
+        }
     }
     &:hover{
         transform: translateY(-1.5rem) scale(1.03);
