--- a/Natours/starter/sass/layout/_grid.scss
+++ b/Natours/starter/sass/layout/_grid.scss
@@ -14,6 +14,11 @@
         max-width: 50rem;
         padding: 0 3rem;
     }
+
+    @include respond(tab-land){
+        max-width: 70rem;
+        padding: 0 5rem;
+    }
     
     @include clearfix;
     
